--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -20,6 +20,7 @@ I am a graduate from the [National Institute of Technology, Silchar](http://www.
 
 Here are my blogs.
 
+- [Operating Systems](./os/os)
 - [Embedded Systems](./embedded/embedded)
 - [mnemofs](./mnemofs/mnemofs)
 
