--- a/pages/os/os.mdx
+++ b/pages/os/os.mdx
@@ -5,5 +5,7 @@
 These are my blogs regarding Operating Systems.
 
 - [Bare Bones OS](./bare_bones)
+- [Motherboard and Chipset](./motherboard)
+- [Computer Boot Sequence with BIOS](./boot)
 
 </div>
