Interactive RISC-V OS

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,13 +8,11 @@ Hi, I am Saurav Pal, and I code under the name `resyfer`. Here's a blog to share
 
 I'm an enthusiastic developer who's open to learning anything and everything related to operating systems, embedded systems, and networking, and I like open source.
 
-I am a Google Summer of Code 2024 (GSoC '24') contributor to Apache organization in which I am working on [designing and implementing mnemofs, which is a filesystem for NAND Flashes for the Apache NuttX Real Time Operating System (RTOS)](https://summerofcode.withgoogle.com/programs/2024/projects/JISwnjR5).
+I am a Google Summer of Code (GSoC) mentor for PostgreSQL in 2025, after being a GSoC contributor to Apache organization in 2024 in which I am working on [designing and implementing mnemofs, which is a filesystem for NAND Flashes for the Apache NuttX Real Time Operating System (RTOS)](https://summerofcode.withgoogle.com/programs/2024/projects/JISwnjR5) and a GSoC contributor to PostgreSQL in 2023, working on [improving PostgreSQL version support for pgexporter](https://summerofcode.withgoogle.com/archive/2023/projects/Djrl5w5B).
 
-I'm an Associate Software Engineer at Oracle in the PSG DevOps team at Hyderabad.
+I'm an Associate Software Engineer at Oracle in the PSG DevOps team, and am currently located at Hyderabad.
 
-I was also a GSoC '23 contributor to PostgreSQL as well, working on [improving PostgreSQL version support for pgexporter](https://summerofcode.withgoogle.com/archive/2023/projects/Djrl5w5B).
-
-I am a graduate from the [National Institute of Technology, Silchar](http://www.nits.ac.in/), which is one of the [Institutions of National Importance in India](https://www.education.gov.in/institutions-national-importance), in which I was pursing a Bachelor of Technology (B. Tech.) in Computer Science and Engineering (CSE) for 4 years (from Nov 2020 - May 2024).
+I am a graduate from the [National Institute of Technology, Silchar](http://www.nits.ac.in/), an [Institution of National Importance](https://www.education.gov.in/institutions-national-importance), where I pursued a Bachelor of Technology (B. Tech.) in Computer Science and Engineering (CSE) from November 2020 (later than usual due to COVID-19) till May 2024.
 
 ## Blogs
 
