--- a/pages/os/boot.mdx
+++ b/pages/os/boot.mdx
@@ -2,7 +2,7 @@ import { Cards, Card } from 'nextra/components'
 
 export let prev = "/os/motherboard";
 export let home = "/";
-export let next = "/coming_soon";
+export let next = "/os/interactive_riscv";
 
 <div style={{textAlign: "justify"}}>
 
