--- a/pages/os/os.mdx
+++ b/pages/os/os.mdx
@@ -7,5 +7,6 @@ These are my blogs regarding Operating Systems.
 - [Bare Bones OS](./bare_bones)
 - [Motherboard and Chipset](./motherboard)
 - [Computer Boot Sequence with BIOS](./boot)
+- [Interactive OS for RISCV](./interactive_riscv)
 
 </div>
